git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@23 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Form/tache/FrmTacheMain.resx
+++ b/oasis/Form/tache/FrmTacheMain.resx
@@ -126,4 +126,92 @@
   <metadata name="TimerRefreshTaches.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>335, 17</value>
   </metadata>
+  <metadata name="ImageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>495, 17</value>
+  </metadata>
+  <data name="ImageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAq
+        EgAAAk1TRnQBSQFMAgEBFAEAASABAAEgAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAAWADAAEBAQABCAYAARgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
+        AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
+        AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
+        AZkCAAFmAcwCAAFmAf8CAAGZAwABmQEzAgABmQFmAgACmQIAAZkBzAIAAZkB/wIAAcwDAAHMATMCAAHM
+        AWYCAAHMAZkCAALMAgABzAH/AgAB/wFmAgAB/wGZAgAB/wHMAQABMwH/AgAB/wEAATMBAAEzAQABZgEA
+        ATMBAAGZAQABMwEAAcwBAAEzAQAB/wEAAf8BMwIAAzMBAAIzAWYBAAIzAZkBAAIzAcwBAAIzAf8BAAEz
+        AWYCAAEzAWYBMwEAATMCZgEAATMBZgGZAQABMwFmAcwBAAEzAWYB/wEAATMBmQIAATMBmQEzAQABMwGZ
+        AWYBAAEzApkBAAEzAZkBzAEAATMBmQH/AQABMwHMAgABMwHMATMBAAEzAcwBZgEAATMBzAGZAQABMwLM
+        AQABMwHMAf8BAAEzAf8BMwEAATMB/wFmAQABMwH/AZkBAAEzAf8BzAEAATMC/wEAAWYDAAFmAQABMwEA
+        AWYBAAFmAQABZgEAAZkBAAFmAQABzAEAAWYBAAH/AQABZgEzAgABZgIzAQABZgEzAWYBAAFmATMBmQEA
+        AWYBMwHMAQABZgEzAf8BAAJmAgACZgEzAQADZgEAAmYBmQEAAmYBzAEAAWYBmQIAAWYBmQEzAQABZgGZ
+        AWYBAAFmApkBAAFmAZkBzAEAAWYBmQH/AQABZgHMAgABZgHMATMBAAFmAcwBmQEAAWYCzAEAAWYBzAH/
+        AQABZgH/AgABZgH/ATMBAAFmAf8BmQEAAWYB/wHMAQABzAEAAf8BAAH/AQABzAEAApkCAAGZATMBmQEA
+        AZkBAAGZAQABmQEAAcwBAAGZAwABmQIzAQABmQEAAWYBAAGZATMBzAEAAZkBAAH/AQABmQFmAgABmQFm
+        ATMBAAGZATMBZgEAAZkBZgGZAQABmQFmAcwBAAGZATMB/wEAApkBMwEAApkBZgEAA5kBAAKZAcwBAAKZ
+        Af8BAAGZAcwCAAGZAcwBMwEAAWYBzAFmAQABmQHMAZkBAAGZAswBAAGZAcwB/wEAAZkB/wIAAZkB/wEz
+        AQABmQHMAWYBAAGZAf8BmQEAAZkB/wHMAQABmQL/AQABzAMAAZkBAAEzAQABzAEAAWYBAAHMAQABmQEA
+        AcwBAAHMAQABmQEzAgABzAIzAQABzAEzAWYBAAHMATMBmQEAAcwBMwHMAQABzAEzAf8BAAHMAWYCAAHM
+        AWYBMwEAAZkCZgEAAcwBZgGZAQABzAFmAcwBAAGZAWYB/wEAAcwBmQIAAcwBmQEzAQABzAGZAWYBAAHM
+        ApkBAAHMAZkBzAEAAcwBmQH/AQACzAIAAswBMwEAAswBZgEAAswBmQEAA8wBAALMAf8BAAHMAf8CAAHM
+        Af8BMwEAAZkB/wFmAQABzAH/AZkBAAHMAf8BzAEAAcwC/wEAAcwBAAEzAQAB/wEAAWYBAAH/AQABmQEA
+        AcwBMwIAAf8CMwEAAf8BMwFmAQAB/wEzAZkBAAH/ATMBzAEAAf8BMwH/AQAB/wFmAgAB/wFmATMBAAHM
+        AmYBAAH/AWYBmQEAAf8BZgHMAQABzAFmAf8BAAH/AZkCAAH/AZkBMwEAAf8BmQFmAQAB/wKZAQAB/wGZ
+        AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
+        AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
+        AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ARgAIrQ4A
+        CGkIAAhSCAAIrQIACa0MAAlpBwAJUgcACa0CAAqtCgAKaQYAClIGAAqtAgACrQUABK0IAARpBQACaQUA
+        BFIFAAJSBQAErQUAAq0CAAatAQAFrQYACWkBAAJpBAAJUgEAAlIEAAmtAQACrQIABq0BAAatBAAKaQEA
+        AmkDAApSAQACUgMACq0BAAKtAgACrQUAB60CAAdpBQACaQIAB1IFAAJSAgAHrQUAAq0CAAKtAQAKrQQA
+        BmkBAAZpAwAGUgEABlIDAAatAQAGrQIAAq0BAAmtBgAFaQEABmkEAAVSAQAGUgQABa0BAAatAgACrQUA
+        BK0IAARpBQACaQUABFIFAAJSBQAErQUAAq0CAAqtCgAKaQYAClIGAAqtAgAJrQwACWkHAAlSBwAJrQIA
+        CK0OAAhpCAAIUggACK3CAAVSAQAIUgIABa0BAAitAgAIaQgACFIIAAFSAwABUgEACFICAAGtAwABrQEA
+        CK0CAAlpBwAJUgcAAVIBAANSAQAIUgIAAa0BAAOtAQAIrQIACmkGAApSBgABUgEAA1IBAAFSBQACUgIA
+        Aa0BAAOtAQABrQUAAq0CAAJpBQAEaQUAAlIFAARSBQABUgMAAVIBAAFSAQAGUgIAAa0DAAGtAQABrQEA
+        Bq0CAAZpAQAFaQQABlIBAAVSBAAFUgEAAVIBAAZSAgAFrQEAAa0BAAatAgAGaQEABmkDAAZSAQAGUgkA
+        AVIDAARSCAABrQMABK0CAAJpBQAHaQIAAlIFAAdSAwAGUgEABlIDAAatAQAGrQIAAmkBAAppAwACUgEA
+        ClIFAAVSAQAGUgQABa0BAAatAgACaQEACWkEAAJSAQAJUgcABFIFAAJSBQAErQUAAq0CAAJpBQAEaQUA
+        AlIFAARSCQAKUgYACq0CAAppBgAKUgsACVIHAAmtAgAJaQcACVINAAhSCAAIrQIACGkIAAhSzgAIaQgA
+        CFIIAAitAgAFaQEACGkHAAlpBwAJUgcACa0CAAFpAwABaQEACGkGAAppBgAKUgYACq0CAAFpAQADaQEA
+        CGkFAARpBQACaQUABFIFAAJSBQAErQUAAq0CAAFpAQADaQEAAWkFAAJpBAAFaQEABmkEAAVSAQAGUgQA
+        Ba0BAAatAgABaQMAAWkBAAFpAQAGaQMABmkBAAZpAwAGUgEABlIDAAatAQAGrQIABWkBAAFpAQAGaQIA
+        B2kDAARpAgAHUgMABFICAAetAwAErQgAAWkDAARpAwAGaQEABmkDAAZSAQAGUgMABq0BAAatAwAGaQEA
+        BmkEAAVpAQAGaQQABVIBAAZSBAAFrQEABq0EAAVpAQAGaQUABGkFAAJpBQAEUgUAAlIFAAStBQACrQUA
+        BGkFAAJpBgAKaQYAClIGAAqtBgAKaQcACWkHAAlSBwAJrQcACWkIAAhpCAAIUggACK0IAAhphgAG8DgA
+        CvAEAAhpCAAIUggACK0JAAzwAwAJaQcACVIHAAmtBwAO8AIACmkGAApSBgAKrQYACPACAATwAgACaQUA
+        BGkFAAJSBQAEUgUAAq0FAAStBAAI8AMABfABAAJpAQAJaQQAAlIBAAlSBAACrQEACa0DAAfwAwAG8AEA
+        AmkBAAppAwACUgEAClIDAAKtAQAKrQIAB/ACAAfwAQACaQMACWkCAAJSAwAJUgIAAq0DAAmtAQAH8AIA
+        B/ABAAJpAQAKaQMAAlIBAApSAwACrQEACq0CAAfwAgAH8AEAAmkBAAlpBAACUgEACVIEAAKtAQAJrQMA
+        B/ACAAfwAQACaQUABGkFAAJSBQAEUgUAAq0FAAStBQAG8AIABvACAAppBgAKUgYACq0GAAbwAgAG8AIA
+        CWkHAAlSBwAJrQgABfACAAXwAwAIaQgACFIIAAitCgAK8DgABvA6AAaeCgAGdQoABrYKAAbwCAAKngYA
+        CnUGAAq2BgAK8AUADJ4EAAx1BAAMtgQABfACAAXwAwAOngIADnUCAA62AgAG8AIABvACAAieAgAEngIA
+        CHUCAAR1AgAItgIABLYCAA7wAQAIngMABZ4IdQMABXUItgMABbYQ8AeeAwAGngd1AwAGdQe2AwAGtgfw
+        AgAH8AeeAgAHngd1AgAHdQe2AgAHtgfwAgAH8AeeAgAHngd1AgAHdQe2AgAHtgjwAwAF8AeeAgAHngd1
+        AgAHdQe2AgAHtgnwAwAE8AeeAgAHngd1AgAHdQe2AgAHtgTwAgAE8AIABPABAAaeAgAGngIABnUCAAZ1
+        AgAGtgIABrYCAAPwAwAC8AMAA/ACAAaeAgAGngIABnUCAAZ1AgAGtgIABrYCAATwBgAE8AMABZ4CAAWe
+        BAAFdQIABXUEAAW2AgAFtgQADPAFAAqeBgAKdQYACrYGAArwCAAGngoABnUKAAa2CgAG8AUAAUIBTQE+
+        BwABPgMAASgDAAFAAwABYAMAAQEBAAEBBgABAxYAA/+BAAj/AYABfwH+AQEB/gEBAf4BAQGAAT8B/AEB
+        AfwBAQH8AQEBgAEfAfgBAQH4AQEB+AEBAZ8BDwHwAfkB8AH5AfAB+QGBAQcB4AEJAeABCQHgAQkBgQED
+        AcABCQHAAQkBwAEJAZ8BAQGAAfkBgAH5AYAB+QGQAQMBwAGBAcABgQHAAYEBkAEHAeABgQHgAYEB4AGB
+        AZ8BDwHwAfkB8AH5AfAB+QGAAR8B+AEBAfgBAQH4AQEBgAE/AfwBAQH8AQEB/AEBAYABfwH+AQEB/gEB
+        Af4BARj/AYIBAQGCAQEBgAF/AYABfwG6AQEBugEBAYABPwGAAT8BogEBAaIBAQGAAR8BgAEfAaIB+QGi
+        AfkBnwEPAZ8BDwG6AYEBugKBAQcBgQEHAYIBgQGCAoEBAwGBAQMB/gHhAf4B4QGfAQEBnwEBAcABgQHA
+        AYEBkAEDAZABAwHgAYEB4AGBAZABBwGQAQcB8AH5AfAB+QGfAQ8BnwEPAfgBAQH4AQEBgAEfAYABHwH8
+        AQEB/AEBAYABPwGAAT8B/gEBAf4BAQGAAX8BgAF/GP8B/gEBAf4BAQH+AQEBggEBAfwBAQH8AQEB/AEB
+        AboBAQH4AQEB+AEBAfgBAQGiAQEB8AH5AfAB+QHwAfkBogH5AeABgQHgAYEB4AGBAboBgQHAAYEBwAGB
+        AcABgQGCAYEBgAHhAYAB4QGAAeEB/gHhAcABgQHAAYEBwAGBAcABgQHgAYEB4AGBAeABgQHgAYEB8AH5
+        AfAB+QHwAfkB8AH5AfgBAQH4AQEB+AEBAfgBAQH8AQEB/AEBAfwBAQH8AQEB/gEBAf4BAQH+AQEB/gEB
+        EP8B+AEfBv8B4AEHAYABfwGAAX8BgAF/AcABAwGAAT8BgAE/AYABPwGAAQEBgAEfAYABHwGAAR8BgAFh
+        AZ8BDwGfAQ8BnwEPAQAB4AGQAQcBkAEHAZABBwEBAcABkAEDAZABAwGQAQMBAQGAAZwBAQGcAQEBnAIB
+        AYABkAEDAZABAwGQAQMBAQGAAZABBwGQAQcBkAEHAQEBgAGfAQ8BnwEPAZ8BDwKBAYABHwGAAR8BgAEf
+        AoEBgAE/AYABPwGAAT8BwQGDAYABfwGAAX8BgAF/AeABBwb/AfgBHwb/AfgBHwH4AR8B+AEfAfgBHwHg
+        AQcB4AEHAeABBwHgAQcBwAEDAcABAwHAAQMBwQGDAYABAQGAAQEBgAEBAoEBgAFhAYABYQGAAWEBgAEB
+        AQAB4AEAAeABAAHgAgABAQHAAQEBwAEBAcABAQGAAQEBgAEBAYABAQGAAQEBgAEBAYABAQGAAQEBgAEA
+        AeABAQGAAQEBgAEBAYABAAFwAQEBgAEBAYABAQGAAQwBMAaBAY4BcQaBAYcB4QHBAYMBwQGDAcEBgwHA
+        AQMB4AEHAeABBwHgAQcB4AEHAfgBHwH4AR8B+AEfAfgBHws=
+</value>
+  </data>
 </root>
