--- a/oasis/Form/Episode/RadFEpisodeEnCoursListe.resx
+++ b/oasis/Form/Episode/RadFEpisodeEnCoursListe.resx
@@ -117,4 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="RadBtnRefresh.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7EAAAOxAGVKw4bAAAAB3RJ
+        TUUH5AQCCBkvIEpYhgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAFLSURBVDhP
+        rdU7SgNRFMbxCUpSGTsRRbfgDoKNW7DwAdoIAQWXEBQsLezch4WoiBBBEAtXYGOlXUihohj/343HHCYz
+        czPBD34wj8vJfc1NkpN57OIKr/j69YJL6J3a+MxiqX85SBWbeMAnejn0Tm02MIlFnOEZf5nCMd6RVSTL
+        G05x4Z6FqGcq9g178YFbHGIbW2jhBkU/GqJh+kZPUJFppKORaKhq4wuZMLmaD3ughg0UZQF38IVMsgdb
+        AA1TPSuKFuAc6UImbA270ZxlDdOnCbXVfKd1EfaZFdQCxDKHVaxjzdH9CsKGtYKx4Y6Ufy9YdsjRlF2U
+        aPShl9k2PjOY6F8OMs7GVpZxjx1U9MCnzKdXh75r+/Q6GBrVKIeDHKANvbN2coShXo5zfKnwCXIXUj3V
+        SRI7YLV3H6Fe1xBN3l+Arq+xDx0SqSTJD7v1qqJz1EkcAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
