--- a/oasis/Form/DRC/RadFDrcListe.resx
+++ b/oasis/Form/DRC/RadFDrcListe.resx
@@ -120,4 +120,7 @@
   <metadata name="DRCMenuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>490, 17</value>
   </metadata>
+  <metadata name="ToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>622, 17</value>
+  </metadata>
 </root>
