git-svn-id: https://ns3119889.ip-51-38-181.eu:8443/svn/oasis@328 24132e46-67f6-c34f-8568-d0b77f9b99e6

--- a/oasis/Form/Specialite/RadFSpecialiteSelecteur.resx
+++ b/oasis/Form/Specialite/RadFSpecialiteSelecteur.resx
@@ -123,6 +123,9 @@
   <metadata name="DS_Specialite.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="ToolTip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>547, 17</value>
+  </metadata>
   <metadata name="Oa_r_specialiteTableAdapter.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>342, 17</value>
   </metadata>
