Mis aux normes des boutons d'action, détail professionnel adapté pour visualiser une autre structure, aide en ligne PPS

--- a/oasis/Form/Patient/RadFPatientDetailEdit.resx
+++ b/oasis/Form/Patient/RadFPatientDetailEdit.resx
@@ -126,4 +126,33 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>25</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEACABoBQAAFgAAACgAAAAQAAAAIAAAAAEACAAAAAAAAAEAAMIeAADCHgAAAAEAAAAB
+        AADbzpUAdcxzAPj27AD08N4A8ezWAFq+TwC8qUIAltqYAM7AdgDFtFsAtJ4rAN7VowDn3rgA9vXoAMCt
+        TAD08eEAzbpqAPbz5QDv6tEA8e3YALunPgDn4LsA5d21APv58wDy7toA6+bHAPPv3ADs58kA6eG+ALij
+        NgCulxwA+/r0AOTcsgDo4r8A6uPCANLFgQC3lRoATLU5APv68wDW8NYA8/v0APLt2gDs3LUAvZ8wAE3C
+        UwDCr1EAwOnBAPn48ADr9+kA7ejOAO7eugCm3aEA5O/YANDDegCGznsA17dnAObz4QCymyQA4depAPLu
+        2QBKtTkA////AK+XHAD///8AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAPz8/Pw4+Pj4+Pj4+FT8/Pz8/EwIOPj4+Pj4+PgwaPz89PyAYHT4+Pj4+Pj46FRM/CRsEBDU+
+        Pj4+Pj4OGhMxCT4+CA8vIQY+PgoLHyYjPj4+Pj4KCxcfIxANJiAdPj4+Pj4+Pj4UAxkbEQ4ePj4+Pj4+
+        PjkQIA8VFQMyNwoePj4IACApDy8AHDQHJhEDKgA1Pz8hExktJBUwPCwuDyIDPz8RAwg+PiQEEQU8PAEn
+        DT89AAo+Pj4rDxIBPDw8JQcoDj4+Pj4+EBIcMzw8PDw8BT4+Pj4+PhwVFjg8PDw8PDw+Pj4+PhQfOz8C
+        Njw8PDw8Pj4+Pj4iPz8/PzA8PDw8PPAHAADAAwAAQAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMAB
+        AACAAQAAAAAAAAAAAAAAAAAAAIAAAAPAAAA=
+</value>
+  </data>
 </root>
