--- a/oasis/Form/Synthese/RadFSynthese.resx
+++ b/oasis/Form/Synthese/RadFSynthese.resx
@@ -171,6 +171,9 @@ Un clic de souris sur cette mention permet d'accéder à l'écran listant les su
         crkoB/AFNe6lJmxqeMgAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>68</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAEBAAAAEACABoBQAAFgAAACgAAAAQAAAAIAAAAAEACAAAAAAAAAEAAMIeAADCHgAAAAEAAAAB
