--- a/oasis/Form/Vaccin/RadFVaccinInfo.resx
+++ b/oasis/Form/Vaccin/RadFVaccinInfo.resx
@@ -129,4 +129,7 @@ Noir: Le vaccin contient des valences requises sans valences non requises</value
   <metadata name="TraitementContextMenuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>318, 30</value>
   </metadata>
+  <metadata name="ToolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>528, 30</value>
+  </metadata>
 </root>
